manifests/applications/tabby.yml
apiVersion: v1
kind: Namespace
metadata:
  name: tabby
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tabby-api
  namespace: tabby
  labels:
    app: tabby-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tabby-api
  template:
    metadata:
      name: tabby-api
      labels:
        app: tabby-api
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: nvidia.com/gpu.product
                    operator: In
                    values:
                      - "NVIDIA-GeForce-RTX-3090"
              weight: 1
      nodeSelector:
        nvidia.com/gpu.count: "2"
      runtimeClassName: nvidia
      volumes:
        - name: data
          nfs:
            path: /mnt/data/k8s/tabby
            server: 192.168.88.25
        - name: config
          configMap:
            name: tabby-config

      containers:
        - name: tabby-api
          image: ghcr.io/theroyallab/tabbyapi:latest
          imagePullPolicy: IfNotPresent
          args:
            - main.py
            - --config
            - /etc/config/config.yml
          volumeMounts:
            - mountPath: /etc/config
              name: config
            - mountPath: /app/models
              subPath: models
              name: data
            - mountPath: /app/loras
              subPath: loras
              name: data
#          resources:
#            requests:
#              nvidia.com/gpu: "2"
#            limits:
#              nvidia.com/gpu: "2"
          ports:
            - containerPort: 5000
              protocol: TCP
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: tabby-api
  namespace: tabby
spec:
  selector:
    app: tabby-api
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tabby-api
  namespace: tabby
spec:
  ingressClassName: kong
  rules:
    - host: tabby.hnatekmar.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tabby-api
                port:
                  number: 5000
